# unified-data-operations

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  MANIFEST.in  NOTICE  NOTICES.txt  README.md  README.md.bak  README_dev.md  docker-compose.yml  job.py  main.py  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py  version.sh
.github/workflows/: bump-version.yml  ci.yml  main.yml  release.yml
access/: policy_template.json
builtin/: ingest.py
builtint/: ingest.py
catalog/: __init__.py  resolvers.py
catalog/services/: __init__.py  catalog.py  table.py
cli/: bindings.py  common.py  core.py  data_product.py  fakers.py  jinja.py  main.py
cli/templates/: config.ini  init_hook.py  pytest.ini.j2  requirements-test.txt  requirements.txt  task_logic.py.j2  test_config.py  test_config.py.j2  test_task_logic.py.j2
deprecated/: table.py
deprecated/writers/: data_frame.py
deprecated_ts/constraints/: column_constraint_regexp.yml  (+4 more)
docs/: access-management.md  architecture.md  data-product-specification.md
driver/: __init__.py  aws_provider.py  common.py  core.py  driver.py  io_handlers.py  packager.py  processors.py  task_executor.py  util.py
job_interpreter/: __init__.py  executor.py
tasks/: aggregate_customer_revenue.py  custom_aggregate_events.py  custom_business_logic.py
tests/: conftest.py  test_constraint_checkers.py  test_core.py  test_df_schema_validator.py  test_end_to_end_task_executor.py  test_model_compilation.py  test_schema_compilation.py  test_task_executor.py  test_util.py
udo_build/: deploy.py  main.py  validate.py
(+156 files in other folders)
