[bumpversion]
current_version = 1.0.4
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<pre>.*)
serialize = 
	{major}.{minor}.{patch}{pre}
	{major}.{minor}.{patch}

[bumpversion:file:setup.py]

[bumpversion:file:version.sh]

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[metadata]
description-file = README.md
